--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,12 @@
         "magento/module-grouped-product-sample-data": "100.2.*",
         "magento/module-swatches-sample-data": "100.2.*",
         "magento/sample-data-media": "100.2.*",
-        "magento/module-offline-shipping-sample-data": "100.2.*"
+        "magento/module-offline-shipping-sample-data": "100.2.*",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "require-dev": {
+        "squizlabs/php_codesniffer": "3.*",
         "phpunit/phpunit": "~6.2.0",
-        "squizlabs/php_codesniffer": "3.0.1",
         "phpmd/phpmd": "@stable",
         "pdepend/pdepend": "2.5.0",
         "friendsofphp/php-cs-fixer": "~2.1.1",
